github ci fixes for doris